# hybrid-isoform-flow

./: .gitignore  README.md  pyproject.toml
config/: idp.yml  references.yml  samples.tsv  workflow.yml
container/: Dockerfile.idp-py2
docs/: PUBLIC_RELEASE.md
idp_beta/: __init__.py  adapters.py  cli.py  config.py  fixture.py  pipeline.py
results_example/: README.md
results_example/expected/: isoform_detection.gpd  isoform_detection.ioe  isoform_detection.psi
tests/: test_adapters.py  test_config.py  test_fixture.py  test_pipeline.py
workflow/: README.md  Snakefile
workflow/rules/: idp.smk  long_reads.smk  postprocess.smk  short_reads.smk
